force-app/main/default/objects/custom_create333__c/custom_create333__c.object-meta.xml
<CustomObject>
    <label>Custom created object333</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects333</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>