force-app/main/default/objects/custom_create333__c/fields/custom_create_333field572__c.field-meta.xml
<CustomField>
    <fullName>custom_create_333field572__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 333field572</label>
    <type>Checkbox</type>
</CustomField>